# amazon-logistics

warehouse_robot/: model.config  model.sdf
warehouserobot/: CMakeLists.txt
warehouserobot/cfg/: warehouserobotplugin.cfg
warehouserobot/include/warehouserobot/: cameraproxy.hh  debugtools.h  warehouserobotcontrol.hh  warehouserobotice.hh  warehouserobotplugin.hh  warehouserobotsensors.hh
warehouserobot/include/warehouserobot/interfaces/: bumperi.h  camerai.h  cameraibase.h  laseri.h  motorsi.h  pose3di.h  pushcamerai.h
warehouserobot/src/: cameraproxy.cc  warehouserobotice.cc  warehouserobotontrol.cc  warehouserobotplugin.cc  warehousesensors.cc
warehouserobot/src/interfaces/: bumperi.cpp  camerai.cpp  cameraibase.cpp  laseri.cpp  motorsi.cpp  pose3di.cpp  pushcamerai.cpp
